8352642: Reduce cost of JAR directory scan in ArchiveContainer